<resources>
    <string name="app_name">AppTA</string>
    <string name="calculate">Kalkulasi</string>
    <string name="logo">LOGO</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="phone_number">No Telepon</string>
    <string name="withdrawal">Penarikan</string>
    <string name="history">Riwayat</string>
    <string name="reward">Rewards</string>
    <string name="donation">Donasi</string>
    <string name="item_type_prompt">Jenis Barang</string>
    <string name="kg">kg</string>
    <string name="weight">Berat</string>
    <string name="price">Harga</string>
    <string name="item_photo">Foto Barang(maksimal 2 Mb)</string>
    <string name="choose"><u>Pilih</u></string>
    <string name="outlet_discount">Diskon Outlet</string>
    <string name="description">Deskripsi</string>
    <string name="voucher_code">Kode Voucher : </string>
    <string name="points">Points</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="special_promo">Special Promo</string>
    <string-array name="item_type_donation">
        <item>Jenis 1</item>
    </string-array>
    <string-array name="item_type_pick_up">
        <item>Jenis 1</item>
        <item>Jenis 2</item>
        <item>Jenis 3</item>
    </string-array>
    <string-array name="bank_name">
        <item>BCA</item>
        <item>BRI</item>
        <item>Permata</item>
    </string-array>

    <string name="title_activity_main_page">MainPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Beranda</string>
    <string name="news">Berita</string>
    <string name="pick_up">Pick Up</string>
    <string name="profile">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Alamat</string>
    <string name="address_description">Deskripsi Lokasi</string>
    <string name="add_item_type">Tambah Jenis Barang</string>
    <string name="rate"><u>Rate</u></string>
    <string name="longtext">Video provides a powerful way to help you prove your point. When you click Online Video, you can paste in the embed code for the video you want to add. You can also type a keyword to search online for the video that best fits your document. To make your document look professionally produced, Word provides header, footer, cover page, and text box designs that complement each other. For example, you can add a matching cover page, header, and sidebar. Click Insert and then choose the elements you want from the different galleries. Themes and styles also help keep your document coordinated. When you click Design and choose a new Theme, the pictures, charts, and SmartArt graphics change to match your new theme.</string>
    <string name="comment">Komentar</string>
    <string name="title_activity_location_picker">Map</string>
    <string name="select_location">Pilih Lokasi</string>
    <string name="write_comment">Isi Komentar</string>
    <string name="save">Simpan</string>
    <string name="rp">Rp</string>
    <string name="item_name">Nama Barang</string>
    <string name="claim">Klaim</string>
    <string name="voucher_price">Harga Voucher</string>
    <string name="full_name_on_account">Nama Lengkap Pada Rekening</string>
    <string name="bank_name">Nama Bank</string>
    <string name="account_number">Nomor Rekening</string>
    <string name="minimal_rp_20_000">Minimal Rp 20.000</string>
    <string name="choose_nominal">Pilih Nominal</string>
    <string name="_100_000">100.000</string>
    <string name="_50_000">50.000</string>
    <string name="submit">Mengajukan</string>
    <string name="withdraw_in_process_notif">Pengajuan sedang diproses, silahkan tunggu untuk kabar selanjutnya</string>
    <string name="pick_up_order">Orderan Pick Up</string>
    <string name="event">Event</string>
    <string name="event_name">Nama Event</string>
    <string name="item_amount">Deskripsi Barang</string>
    <string name="sign_out">Sign Out</string>
    <string name="calculate_header">Silahkan masukkan jenis dan berat barang yang akan anda jual untuk menghitung harga yang akan dibayarkan</string>
    <string name="history_detail">Detil Riwayat</string>
    <string name="total">Total</string>
    <string name="no_histories_message">Tidak ada riwayat transaksi, lakuakan transaksi dengan menggunakan tab pick up</string>
    <string name="forget_password"><u>Lupa Password</u></string>
    <string name="channel_name">Money Notification Channel</string>
    <string name="channel_description">This channel is for all notification related to money such as transfer, point get and so on</string>
    <string name="order_list">Daftar Orderan</string>
    <string name="no_order_message">Anda belum melakukan orderan, ayo lakukan sekarang melalui tab pick up</string>
    <string name="activity">Aktivitas</string>
    <string name="driver_name">Nama Driver</string>
    <string name="driver_phone_number">No HP Driver</string>
    <string name="cancel_order">Batal Pesanan</string>
    <string name="send">Kirim</string>
    <string name="email_forget_message">Masukkan email anda, kami akan mengirim email untuk mengganti password</string>
    <string name="not_decided_picker">Belum ditentukan, harap menunggu sampai jam penentuan picker berikutnya</string>
    <string name="notification">Notifikasi</string>
    <string name="no_notification_message">Anda tidak memiliki notifikasi</string>
    <string name="identity_card">KTP</string>
    <string name="identity_card_photo">Foto KTP</string>
    <string name="order">Orderan</string>
    <string name="identity_not_verified">Maaf, Akun anda belum terverifikasi, silahkan tunggu verifikasi dari admin kami</string>
    <string name="_200_000">200.000</string>
    <string name="_20_000">20.000</string>
    <string name="identity_card_picture_path">Path Gambar KTP</string>
    <string name="choose_identity_card_image">Pilih gambar KTP</string>
    <string name="update_identity_card">Perbarui KTP</string>
</resources>
