<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WithdrawDetailFragment">


    <EditText
        android:id="@+id/withdraw_edt_name"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/full_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/withdraw_edt_bank_name"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/bank_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/withdraw_edt_account_number"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/account_number"
        android:inputType="number" />

    <TextView

        style="@style/TextHeader3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/choose_nominal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/withdraw_btn_100000"
            style="@style/ButtonSecondaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/_100_000" />

        <Button
            android:id="@+id/withdraw_btn_50000"
            style="@style/ButtonSecondaryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/_50_000" />
    </LinearLayout>

    <EditText
        android:id="@+id/withdraw_edt_amount"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/minimal_rp_50_000"
        android:inputType="number" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/withdraw_btn_submit"
        style="@style/ButtonPrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/submit" />


</LinearLayout>