<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.EditProfilePage">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        >
        <ImageView
            android:id="@+id/edit_profile_btn_back"
            android:layout_width="@dimen/ImageButtonSize3"
            android:layout_height="@dimen/ImageButtonSize3"
            android:tintMode="src_atop"
            android:tint="#FFFFFF"
            android:src="@drawable/icon_back_button"/>
        <TextView
            style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:id="@+id/edit_profile_toolbar_tv"
            android:layout_width="match_parent"
            android:layout_marginEnd="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="26sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/edit_profile"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            />
    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/edit_profile_edt_name"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:enabled="false"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_profile_edt_phone_number"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit_profile_edt_email"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:enabled="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/edit_profile_btn_save"
        style="@style/ButtonPrimaryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save" />

</LinearLayout>